<resources>
    <string name="app_name">Azalea</string>
    <string name="panicbutton">PanicButton</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="azalea">AZALEA</string>
    <string name="est_seguro_de_cancelar">¿Está seguro de cancelar?</string>
    <string name="ingrese_c_digo_de_verificaci_n">Ingrese código de verificación</string>
    <string name="menu_button">Menu Button</string>
    <string name="s">Sí</string>
    <string name="no">No</string>
    <string name="enviar">Enviar</string>
    <string name="c_digo">Código</string>
    <string name="personalizar_mensaje">Personalizar mensaje</string>
    <string name="ingrese_mensaje_de_alerta">Ingrese mensaje de alerta</string>
    <string name="escriba_su_mensaje_aqu">Escriba su mensaje aquí</string>
    <string name="ingrese_mensaje_de_cancelaci_n">Ingrese mensaje de cancelación</string>
    <string name="guardar">Guardar</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="no_tienes_una_cuenta_reg_strate"><u>¿No tienes una cuenta? Regístrate</u></string>
    <string name="cancelar">Cancelar</string>
    <string name="boton_de_panico">Boton de Panico</string>
    <string name="perfil">Perfil</string>
    <string name="registrar_datos_basicos">Registrar datos basicos</string>
    <string name="registrar_contacto_de_emegencia">Registrar contacto de emegencia</string>
    <string name="rh">RH</string>
    <string name="telefono">Telefono:</string>
    <string name="correo">Correo:</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="estado">Estado:</string>
    <string name="contactos_de_emergencia">Contactos de emergencia:</string>
    <string name="nombre">Nombre</string>
    <string name="nombres_y_apellidos">Nombres y apellidos:</string>
    <string name="contrase_a_dosp">Contraseña:</string>
    <string name="registrarse">Registrarse</string>
    <string name="seleccionar_contacto">Seleccionar contacto</string>
    <string name="introduzca_numero">Introduzca numero</string>
    <string name="numero_del_contacto">Numero del contacto:</string>
    <string name="registrar_contacto_de_emergencia">Registrar Contacto de Emergencia</string>
    <string name="nombre_del_contacto">Nombre del contacto:</string>
    <string name="introduzca_nombre_de_tel_fono">Introduzca nombre de teléfono</string>
    <string name="relaci_n">Relación:</string>
    <string name="introduzca_relaci_n_con_el_contacto">Introduzca relación con el contacto</string>
    <string name="enviar_solicitud">Enviar solicitud</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="descripciones_f_sicas_adicionales">Descripciones físicas adicionales:</string>
    <string name="introduzca_su_color_de_ojos">Introduzca su color de ojos</string>
    <string name="color_de_ojos">Color de ojos:</string>
    <string name="introduzca_su_color_de_pelo">Introduzca su color de pelo</string>
    <string name="color_de_pelo">Color de pelo:</string>
    <string name="introduzca_su_peso">Introduzca su peso</string>
    <string name="peso">Peso</string>
    <string name="introduzca_su_estatura">Introduzca su estatura</string>
    <string name="estatura">Estatura:</string>
    <string name="introduzca_su_tipo_de_sangre">Introduzca su tipo de sangre</string>
    <string name="tipo_de_sangre">Tipo de Sangre</string>
    <string name="selecciona_una_fecha">Selecciona una fecha</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="introduzca_su_nombre_completo">Introduzca su nombre completo</string>
    <string name="nombre_dp">Nombre:</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="ingrese_correo">Ingrese correo:</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n"><u>¿Ya tienes una cuenta? Inicia sesión</u></string>
    <string name="emergencia">Emergencia</string>
    <string name="alertas">Alertas</string>
    <string name="contactos">Contactos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifications">Notifications</string>
    <string name="agregar_contacto">Agregar contacto</string>
    <string name="cancelar_alerta">Cancelar alerta</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="birthdate">Birthdate</string>
    <string name="cumplea_os">Cumpleaños</string>
    <string name="altura">Altura</string>
    <string name="ruler">Ruler</string>
    <string name="weight">Weight</string>
    <string name="n_a">N/A</string>
    <string name="descripci_n_f_sica">Descripción física</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="logout">Logout</string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="buscar_contacto">Buscar contacto</string>
    <string name="search_contact">Search Contact</string>
    <string name="agregar">Agregar</string>
    <string name="availability">Availability</string>
    <string name="cambiar_c_digo">Cambiar código</string>
    <string name="c_digo_actual">Código actual</string>
    <string name="nuevo_c_digo">Nuevo código</string>
    <string name="actualizar_c_digo">Actualizar código</string>
</resources>