<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CancelarActivity"
    android:background="@color/azalea"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/linearLayoutCancelAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >

        <ImageButton
            android:id="@+id/imgButtonMenuCancelAct"
            android:scaleType="centerCrop"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/azalea"
            app:srcCompat="@drawable/menusi"
            android:contentDescription="@string/menu_button" />


        <TextView
            android:id="@+id/titleMenuCancelAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/azalea"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:fontFamily="@font/abril_fatface"
            android:textColor="@color/cafeAzalea"/>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            app:cardCornerRadius="150dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/imgProfileCancelAct"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/pfp"
                android:contentDescription="@string/profile_pic" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/textCodeVerifyCancelAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_c_digo_de_verificaci_n"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        android:fontFamily="@font/abril_fatface"
        android:layout_below="@id/linearLayoutCancelAct"
        android:textColor="@color/cafeAzalea"

        />

    <EditText
        android:id="@+id/codeTextFieldCancelAct"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@id/textCodeVerifyCancelAct"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/c_digo"/>

    <TextView
        android:id="@+id/textViewChoiceCancelAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/est_seguro_de_cancelar"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:fontFamily="@font/abril_fatface"
        android:layout_below="@id/codeTextFieldCancelAct"
        android:textColor="@color/cafeAzalea"
        />

    <RadioGroup
        android:id="@+id/radioGroupDecisionCancelAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:layout_below="@id/textViewChoiceCancelAct">

        <RadioButton
            android:id="@+id/radioButtonYesCancelAct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"/>

        <RadioButton
            android:id="@+id/radioButtonNoCancelAct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>

    </RadioGroup>

    <Button
        android:id="@+id/buttonSendCancelAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupDecisionCancelAct"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/cafeAzalea"
        android:gravity="center"
        android:text="@string/enviar" />

    <ImageView
        android:id="@+id/imgViewFlor0"
        android:layout_width="115dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/azalea"
        android:layout_marginTop="640dp"
        android:alpha="0.2" />

    <ImageView
        android:id="@+id/imgViewFlor1"
        android:layout_width="115dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/azalea"
        android:layout_marginTop="640dp"
        android:alpha="0.2"
        android:layout_marginStart="295dp"/>



</RelativeLayout>