<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/azalea"
    android:padding="15dp">

    <LinearLayout
        android:id="@+id/linearLayoutMenuAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/textViewMenuAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/azalea"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:fontFamily="@font/abril_fatface"
            android:textColor="@color/cafeAzalea"/>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            app:cardCornerRadius="150dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/imageViewPerfilMenuAct"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/pfp"
                />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/buttonMenuPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutMenuAct"
        android:layout_centerInParent="true"
        android:layout_marginTop="165dp"
        android:backgroundTint="@color/cafeAzalea"
        android:gravity="center"
        android:text="@string/perfil" />

    <Button
        android:id="@+id/buttonMenuCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonMenuPerfil"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/cafeAzalea"
        android:gravity="center"
        android:text="@string/cancelar" />

    <Button
        android:id="@+id/buttonMenuPanico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonMenuCancel"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/cafeAzalea"
        android:gravity="center"
        android:text="@string/boton_de_panico" />

    <Button
        android:id="@+id/buttonMenuCongMeng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonMenuPanico"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/cafeAzalea"
        android:gravity="center"
        android:text="@string/personalizar_mensaje" />

    <Button
        android:id="@+id/buttonMenuRegisDatBas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonMenuCongMeng"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/cafeAzalea"
        android:gravity="center"
        android:text="@string/registrar_datos_basicos" />

    <Button
        android:id="@+id/buttonMenuRegiContEmer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonMenuRegisDatBas"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/cafeAzalea"
        android:gravity="center"
        android:text="@string/registrar_contacto_de_emegencia" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="115dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/azalea"
        android:layout_marginTop="640dp"
        android:alpha="0.2" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="115dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/azalea"
        android:layout_marginTop="640dp"
        android:alpha="0.2"
        android:layout_marginLeft="295dp"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="115dp"
        app:srcCompat="@drawable/azalea"
        android:alpha="0.2"
        android:layout_below="@id/linearLayoutMenuAct"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="120dp"
        android:layout_height="115dp"
        app:srcCompat="@drawable/azalea"
        android:alpha="0.2"
        android:layout_marginLeft="295dp"
        android:layout_below="@id/linearLayoutMenuAct"/>

</RelativeLayout>