<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanicoActivity"
    android:background="@color/azalea">

    <LinearLayout
        android:id="@+id/linearLayoutPanicAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageButton
            android:id="@+id/imgButtonMenuPanicAct"
            android:scaleType="centerCrop"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/azalea"
            app:srcCompat="@drawable/menusi"
            android:contentDescription="@string/menu_button" />


        <TextView
            android:id="@+id/titleMenuPanicAct"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/azalea"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:fontFamily="@font/abril_fatface"
            android:textColor="@color/cafeAzalea"/>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            app:cardCornerRadius="150dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/imgProfilePanicAct"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/pfp"
                android:contentDescription="@string/profile_pic"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/imgButtonPanicAct"
        android:scaleType="centerCrop"
        android:layout_width="500dp"
        android:layout_height="500dp"
        app:srcCompat="@drawable/panico"
        android:background="@color/azalea"
        android:layout_below="@id/linearLayoutPanicAct"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/panicbutton"
        android:padding="60dp"/>

    <Button
        android:id="@+id/buttonCancelarPanicAct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgButtonPanicAct"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/cafeAzalea"
        android:gravity="center"
        android:text="@string/cancelar"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imgViewFlor0"
        android:layout_width="115dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/azalea"
        android:layout_marginTop="640dp"
        android:alpha="0.2" />

    <ImageView
        android:id="@+id/imgViewFlor1"
        android:layout_width="115dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/azalea"
        android:layout_marginTop="640dp"
        android:alpha="0.2"
        android:layout_marginStart="295dp"/>

</RelativeLayout>