<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClaveOlvidadaActivity"
    android:background="@color/azaleaOscuro">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@color/azalea"/>

    <ImageView
        android:id="@+id/imageViewPerfilMenuAct"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@drawable/logo_2_azalea"
        />

    <TextView
        android:id="@+id/registerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/recuperar_contrase_a"
        android:textColor="@color/cafeAzalea"
        android:textSize="36sp"
        android:layout_marginTop="250dp"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/nombreR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_correo"
        android:fontFamily="@font/abril_fatface"
        android:layout_below="@id/registerTextView"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/cafeAzalea"
        android:textSize="18sp"
        />



    <EditText
        android:id="@+id/editTextTextEmailPassForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_below="@id/nombreR"
        android:layout_marginLeft="20dp"
        android:hint="@string/correo"
        />


    <Button
        android:id="@+id/buttonSendMailPassForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextEmailPassForget"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/cafeAzalea"
        android:gravity="center"
        android:text="@string/enviar" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="115dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/azalea"
        android:layout_marginTop="640dp"
        android:alpha="0.2" />
    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="115dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/azalea"
        android:layout_marginTop="640dp"
        android:alpha="0.2"
        android:layout_marginLeft="295dp"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="120dp"
        android:layout_height="115dp"
        app:srcCompat="@drawable/azalea"
        android:alpha="0.2"
        android:layout_marginLeft="295dp"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="120dp"
        android:layout_height="115dp"
        app:srcCompat="@drawable/azalea"
        android:alpha="0.2" />

</RelativeLayout>